// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generator output snapshots > reactGenerator colorful matches snapshot > react-colorful 1`] = `
"/* GENERATED FILE - DO NOT EDIT */
import React, { forwardRef } from "react";
import type { Icon } from "../lib/types";
import SSRBase from "../lib/ssr";

const I: Icon = forwardRef((props, ref) => (
  <SSRBase ref={ref} {...props}>
    <path d="M3 3h18v18H3z" clipRule="evenodd"/>
  </SSRBase>
));

I.displayName = "DeviconsSample";
export { I as DeviconsSample };
"
`;

exports[`generator output snapshots > reactGenerator mono matches snapshot > react-mono 1`] = `
"/* GENERATED FILE - DO NOT EDIT */
import React, { forwardRef } from "react";
import type { Icon } from "../lib/types";
import SSRBase from "../lib/ssr";

const I: Icon = forwardRef((props, ref) => (
  <SSRBase ref={ref} {...props}>
    <path d="M100 100h800v800H100z"/>
  </SSRBase>
));

I.displayName = "DeviconsSample";
export { I as DeviconsSample };
"
`;

exports[`generator output snapshots > svelteGenerator colorful matches snapshot > svelte-colorful 1`] = `
"<!-- GENERATED FILE - DO NOT EDIT -->
<script lang="ts">
  import Base from "../lib/Base.svelte";

  const content = \`<path d="M3 3h18v18H3z" clip-rule="evenodd"/>\`;

  const { ...rest } = $props();
</script>

<Base {...rest} {content} />
"
`;

exports[`generator output snapshots > svelteGenerator mono matches snapshot > svelte-mono 1`] = `
"<!-- GENERATED FILE - DO NOT EDIT -->
<script lang="ts">
  import Base from "../lib/Base.svelte";

  const content = \`<path d="M100 100h800v800H100z"/>\`;

  const { ...rest } = $props();
</script>

<Base {...rest} {content} />
"
`;

exports[`generator output snapshots > vueGenerator colorful matches snapshot > vue-colorful 1`] = `
"<!-- GENERATED FILE - DO NOT EDIT -->
<script setup lang="ts">
import Base from "../lib/Base.vue";

defineOptions({ name: "DeviconsSample" });

const content = \`<path d="M3 3h18v18H3z" clip-rule="evenodd"/>\`;
</script>

<template>
  <Base v-bind="$attrs" :content="content" />
</template>
"
`;

exports[`generator output snapshots > vueGenerator mono matches snapshot > vue-mono 1`] = `
"<!-- GENERATED FILE - DO NOT EDIT -->
<script setup lang="ts">
import Base from "../lib/Base.vue";

defineOptions({ name: "DeviconsSample" });

const content = \`<path d="M100 100h800v800H100z"/>\`;
</script>

<template>
  <Base v-bind="$attrs" :content="content" />
</template>
"
`;
